Add rebuild bioc packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(rebuild_all_missing_binaries)
 export(rebuild_all_missing_sources)
 export(rebuild_all_oldies)
 export(rebuild_all_remotes)
+export(rebuild_bioc_packages)
 export(rebuild_failed_vignettes)
 export(rebuild_failures)
 export(rebuild_missing_binaries)
