--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,10 @@
 
 export(cancel_all_queued_builds)
 export(cancel_queued_builds)
-export(delete_all_deployments)
+export(delete_all_environments)
 export(delete_all_old_binaries)
 export(delete_all_old_binaries_fast)
-export(delete_deployments)
+export(delete_environments)
 export(delete_old_files)
 export(delete_one)
 export(enable_all_workflows)
