add wrapper to trigger arm rebuilds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(rebuild_all_remotes)
 export(rebuild_bioc_packages)
 export(rebuild_failed_vignettes)
 export(rebuild_failures)
+export(rebuild_missing_arm64)
 export(rebuild_missing_binaries)
 export(rebuild_missing_sources)
 export(rebuild_mixed_case_login)
