--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(delete_old_files)
 export(delete_one)
 export(enable_all_workflows)
 export(list_all_packages)
+export(rebuild_all_missing_arm64)
 export(rebuild_all_missing_binaries)
 export(rebuild_all_missing_sources)
 export(rebuild_all_oldies)
