Retry instead of rebuild failures

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,6 @@ export(rebuild_all_oldies)
 export(rebuild_all_remotes)
 export(rebuild_bioc_packages)
 export(rebuild_failed_vignettes)
-export(rebuild_failures)
 export(rebuild_missing_arm64)
 export(rebuild_missing_binaries)
 export(rebuild_missing_sources)
@@ -28,6 +27,7 @@ export(rebuild_universe_remotes_only)
 export(rebuild_vignettes)
 export(remove_all_packages_with_remotes)
 export(remove_packages_with_remotes)
+export(retry_failures)
 export(trigger_all_rebuilds)
 export(trigger_rebuilds)
 import(gert)
