--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(rebuild_universe_remotes_only)
 export(rebuild_vignettes)
 export(remove_all_packages_with_remotes)
 export(remove_packages_with_remotes)
+export(retry_failed_binaries)
 export(retry_failures)
 export(trigger_all_rebuilds)
 export(trigger_rebuilds)
