--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(remove_all_packages_with_remotes)
 export(remove_packages_with_remotes)
 export(retry_failed_binaries)
 export(retry_failures)
+export(trigger_all_cleanups)
 export(trigger_all_rebuilds)
 export(trigger_rebuilds)
 import(gert)
