--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(enable_all_workflows)
 export(list_all_packages)
 export(rebuild_all_missing_arm64)
 export(rebuild_all_missing_binaries)
+export(rebuild_all_missing_field)
 export(rebuild_all_missing_sources)
 export(rebuild_all_oldies)
 export(rebuild_all_remotes)
@@ -27,6 +28,7 @@ export(rebuild_universe_remotes_only)
 export(rebuild_vignettes)
 export(remove_all_packages_with_remotes)
 export(remove_packages_with_remotes)
+export(retry_everything)
 export(retry_failed_binaries)
 export(retry_failures)
 export(trigger_all_cleanups)
