Add action to trigger revdeps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,5 +35,6 @@ export(retry_failures)
 export(trigger_all_cleanups)
 export(trigger_all_rebuilds)
 export(trigger_rebuilds)
+export(trigger_revdeps)
 import(gert)
 importFrom(gh,gh)
